--- a/Baichuan2_sagemaker.ipynb
+++ b/Baichuan2_sagemaker.ipynb
@@ -107,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "huggingface_estimator.fit({\"train\": training_input_path})"
+    "huggingface_estimator.fit({\"training\": training_input_path})"
    ]
   },
   {
