--- a/Baichuan2_sagemaker.ipynb
+++ b/Baichuan2_sagemaker.ipynb
@@ -87,7 +87,7 @@
     "huggingface_estimator = HuggingFace(\n",
     "    entry_point=\"fine-tune.sh\",\n",
     "    source_dir=\"./fine-tune\",\n",
-    "    instance_type=\"ml.g5.2xlarge\",\n",
+    "    instance_type=\"local_gpu\",  # \"ml.g5.2xlarge\"\n",
     "    instance_count=1,\n",
     "    role=role,\n",
     "    transformers_version=\"4.28\",\n",
@@ -107,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "huggingface_estimator.fit({\"train\": training_input_path})"
+    "huggingface_estimator.fit({\"train\": training_input_path})  # TODO upload model is very slow, should use s5cmd to accelerate"
    ]
   },
   {
